Update 102.6 Lesson 1.md

--- a/LPIC-1 Exam 101/Topic 102: Linux Installation and Package Management/102.6 Linux as a virtualization guest/102.6 Lesson 1.md
+++ b/LPIC-1 Exam 101/Topic 102: Linux Installation and Package Management/102.6 Linux as a virtualization guest/102.6 Lesson 1.md
@@ -337,3 +337,82 @@ $ sudo dbus-uuidgen --ensure=/etc/machine-id
 Сети  
 Одна из основных составляющих работы с поставщиком облачных решений - это настройка виртуальной сети. Многие провайдеры IaaS будут иметь ту или иную форму веб-утилит, которые можно использовать для проектирования и реализации различных сетевых маршрутов, подсетей и конфигураций брандмауэра. Некоторые даже предоставляют решения DNS, чтобы общедоступные FQDN (*полные доменные имена*) могли быть назначены вашим системам, выходящим в Интернет. Существуют даже «гибридные» решения, которые могут подключать существующую локальную сетевую инфраструктуру к облачной инфраструктуре с помощью VPN (*виртуальной частной сети*), таким образом связывая две инфраструктуры вместе.
 
+
+### Безопасный доступ к гостям в облаке
+
+Наиболее распространенный метод доступа к удаленному виртуальному гостю на облачной платформе - использование программного обеспечения OpenSSH. В системе Linux, которая находится в облаке, будет запущен сервер OpenSSH, а администратор будет использовать клиент OpenSSH с предварительно заданными ключами для удаленного доступа. 
+
+Администратор должен запустить следующую команду
+
+```console
+$ ssh-keygen
+```
+
+и следовать инструкциям по созданию пары открытого и закрытого ключей SSH. Закрытый ключ остается в локальной системе администратора (хранится в `~/.ssh/`), а открытый ключ копируется в удаленную облачную систему, точно так же, как и при работе с сетевыми машинами в корпоративной локальной сети. Затем администратор выполнит следующую команду:
+
+```console
+$ ssh-copy-id -i <public_key> user@cloud_server
+```
+
+Это скопирует общедоступный ключ SSH из только что сгенерированной пары ключей на удаленный облачный сервер. Открытый ключ будет записан в файл `~/.ssh/authorized_keys` облачного сервера, и для него будут установлены соответствующие разрешения.
+
+>Если в каталоге `~/.ssh/` есть только один файл с открытым ключом, то параметр `-i` можно не указывать, поскольку команда `ssh-copy-id` по умолчанию будет использовать файл открытого ключа в каталоге (обычно файл, заканчивающийся на расширение `.pub`).
+
+Некоторые облачные провайдеры автоматически генерируют пару ключей при инициализации новой системы Linux. Затем администратору необходимо будет загрузить открытый ключ для новой системы от облачного провайдера и сохранить его в своей локальной системе. Обратите внимание, что разрешения для ключей SSH должны быть `0600` для закрытого ключа и `0644` для открытого ключа.
+
+
+### Предварительная настройка облачных систем
+
+Полезным инструментом, упрощающим развертывание облачных виртуальных машин, является служебная программа `cloud-init`. Эта команда, вместе со связанными файлами конфигурации и предопределенным образом виртуальной машины, является независимым от поставщика методом развертывания гостевой системы Linux среди множества поставщиков IaaS. Используя текстовые файлы YAML (*YAML Ain't Markup Language*), администратор может предварительно настроить параметры сети, выбор пакетов программного обеспечения, конфигурацию ключа SSH, создание учетных записей пользователей, настройки локали, а также множество других опций для быстрого создания новых системы. 
+
+Во время начальной загрузки новой системы `cloud-init` считывает настройки из файлов конфигурации YAML и применяет их. Этот процесс необходимо применить только к начальной настройке системы, и он упрощает развертывание парка новых систем на платформе поставщика облачных услуг. 
+
+Синтаксис файла YAML, используемый с `cloud-init`, называется *cloud-config*. Вот пример файла облачной конфигурации:
+
+```console
+#cloud-config
+timezone: Africa/Dar_es_Salaam
+hostname: test-system
+
+# Update the system when it first boots up
+apt_update: true
+apt_upgrade: true
+
+# Install the Nginx web server
+packages:
+ - nginx
+```
+
+Обратите внимание, что в верхней строке нет пробела между символом решетки (`#`) и термином `cloud-config`.
+
+
+## Контейнеры
+
+Контейнерная технология в некоторых аспектах похожа на виртуальную машину, где вы получаете изолированную среду для простого развертывания приложения. В то время как виртуальная машина эмулирует весь компьютер, в контейнере используется ровно столько программного обеспечения, сколько требуется для запуска приложения. Таким образом, накладных расходов намного меньше. 
+
+Контейнеры обеспечивают большую гибкость по сравнению с виртуальной машиной. Контейнер приложения можно перенести с одного хоста на другой, так же как виртуальную машину можно перенести с одного гипервизора на другой. Однако иногда виртуальную машину необходимо выключить перед ее миграцией, тогда как с контейнером приложение всегда выполняется во время миграции. Контейнеры также упрощают развертывание новых версий приложений в тандеме с существующей версией. Когда пользователи закрывают свои сеансы с запущенными контейнерами, эти контейнеры могут быть автоматически удалены из системы программным обеспечением оркестровки контейнеров и заменены новой версией, что сокращает время простоя.
+
+>Для Linux доступно множество контейнерных технологий, таких как *Docker*, *Kubernetes*, *LXD/LXC*, /systemd-nspawn*, *OpenShift* и другие. Точная реализация контейнерного программного пакета выходит за рамки экзамена LPIC-1.
+
+Контейнеры используют механизм *групп управления* (более известный как *cgroups*) в ядре Linux. Cgroup - это способ разделения системных ресурсов, таких как память, время процессора, а также диск и пропускная способность сети для отдельного приложения. Администратор может использовать контрольные группы напрямую, чтобы установить ограничения системных ресурсов для приложения или группы приложений, которые могут существовать в одной контрольной группе. По сути, это то, что контейнерное программное обеспечение делает для администратора, а также предоставляет инструменты, упрощающие управление и развертывание контрольных групп.
+
+>В настоящее время знание контрольных групп не требуется для сдачи экзамена LPIC-1. Здесь упоминается концепция cgroup, чтобы кандидат имел хотя бы некоторые базовые знания о том, как приложение разделяется ради использования ресурсов системы.
+
+## Упражнения для закрепления
+
+
+
+
+## Упражнения на размышление
+
+
+
+## Резюме
+
+
+
+## Ответы на упражнения для закрепления
+
+
+
+## Ответы на упражнения для размышления
