Update 102.6 Lesson 1.md

--- a/LPIC-1 Exam 101/Topic 102: Linux Installation and Package Management/102.6 Linux as a virtualization guest/102.6 Lesson 1.md
+++ b/LPIC-1 Exam 101/Topic 102: Linux Installation and Package Management/102.6 Linux as a virtualization guest/102.6 Lesson 1.md
@@ -398,21 +398,57 @@ packages:
 
 >В настоящее время знание контрольных групп не требуется для сдачи экзамена LPIC-1. Здесь упоминается концепция cgroup, чтобы кандидат имел хотя бы некоторые базовые знания о том, как приложение разделяется ради использования ресурсов системы.
 
+
 ## Упражнения для закрепления
 
+1. Какие расширения CPU необходимы на аппаратной платформе на базе x86, которая будет работать с полностью виртуализированными гостями? 
 
+2. Какой тип виртуализации будет использоваться для установки критически важного сервера, которая потребует максимальной производительности? 
+
+3. Две виртуальные машины, клонированные из одного шаблона и использующие D-Bus, работают нестабильно. У них обоих разные имена хостов и настройки конфигурации сети. Какая команда будет использоваться, чтобы определить, имеют ли каждая из виртуальных машин разные идентификаторы D-Bus Machine ID?
 
 
 ## Упражнения на размышление
 
+1. Выполните следующую команду, чтобы узнать, включены ли в вашей системе расширения CPU для запуска виртуальной машины (ваши результаты могут отличаться в зависимости от вашего CPU): `grep --color -E "vmx | svm" / proc / cpuinfo`
+
+В зависимости от вывода вы можете выделить `vmx` (для CPU с Intel VT-x) или `svm` (для CPU с AMD SVM). Если вы не получите результатов, обратитесь к инструкциям по прошивке BIOS или UEFI, чтобы узнать, как включить виртуализацию для вашего процессора. 
+
+2. Если ваш процессор поддерживает виртуализацию, поищите документацию к вашему дистрибутиву для запуска гипервизора KVM. 
+* Установите необходимые пакеты для запуска гипервизора KVM. 
+* Если вы используете графическую среду рабочего стола, рекомендуется также установить приложение `virt-manager`, которое представляет собой графический интерфейс, который можно использовать при установке KVM. Это поможет в установке виртуальных машин и управлении ими. 
+* Загрузите ISO-образ дистрибутива Linux по вашему выбору и, следуя документации вашего дистрибутива, создайте новую виртуальную машину, используя этот ISO.
 
 
 ## Резюме
 
+В этом уроке мы рассмотрели концептуальные основы виртуальных машин и контейнеров, а также то, как эти технологии могут использоваться с Linux. 
+
+Мы кратко описали следующие команды: 
+
+`dbus-uuidgen`  
+Используется для проверки и просмотра системного идентификатора DBus ID. 
+
+`ssh-keygen`  
+Используется для генерации общедоступной и частной пары ключей SSH для использования при доступе к удаленным облачным системам. 
+
+`ssh-copy-id`  
+Используется для копирования общедоступного SSH-ключа системы в удаленную систему для облегчения удаленной аутентификации. 
+
+`cloud-init`  
+Используется для помощи в настройке и развертывании виртуальных машин и контейнеров в облачной среде.
 
 
 ## Ответы на упражнения для закрепления
 
+**1. Какие расширения CPU необходимы на аппаратной платформе на базе x86, которая будет работать с полностью виртуализированными гостями?**  
+VT-x для Intel CPUs или AMD-V для AMD CPUs
+
+**2. Какой тип виртуализации будет использоваться для установки критически важного сервера, которая потребует максимальной производительности?**
+Операционная система, которая использует паравиртуализацию, например Xen, поскольку гостевая операционная система может лучше использовать доступные аппаратные ресурсы, осуществляется за счет использования программных драйверов, предназначенных для работы с гипервизором.
+
+**3. Две виртуальные машины, клонированные из одного шаблона и использующие D-Bus, работают нестабильно. У них обоих разные имена хостов и настройки конфигурации сети. Какая команда будет использоваться, чтобы определить, имеют ли каждая из виртуальных машин разные идентификаторы D-Bus Machine ID?**
+`dbus-uuidgen --get`
 
 
 ## Ответы на упражнения для размышления
