--- a/LPIC-1 Exam 101/Topic 102: Linux Installation and Package Management/102.6 Linux as a virtualization guest/102.6 Lesson 1.md
+++ b/LPIC-1 Exam 101/Topic 102: Linux Installation and Package Management/102.6 Linux as a virtualization guest/102.6 Lesson 1.md
@@ -444,11 +444,36 @@ packages:
 **1. Какие расширения CPU необходимы на аппаратной платформе на базе x86, которая будет работать с полностью виртуализированными гостями?**  
 VT-x для Intel CPUs или AMD-V для AMD CPUs
 
-**2. Какой тип виртуализации будет использоваться для установки критически важного сервера, которая потребует максимальной производительности?**
+**2. Какой тип виртуализации будет использоваться для установки критически важного сервера, которая потребует максимальной производительности?**  
 Операционная система, которая использует паравиртуализацию, например Xen, поскольку гостевая операционная система может лучше использовать доступные аппаратные ресурсы, осуществляется за счет использования программных драйверов, предназначенных для работы с гипервизором.
 
-**3. Две виртуальные машины, клонированные из одного шаблона и использующие D-Bus, работают нестабильно. У них обоих разные имена хостов и настройки конфигурации сети. Какая команда будет использоваться, чтобы определить, имеют ли каждая из виртуальных машин разные идентификаторы D-Bus Machine ID?**
+**3. Две виртуальные машины, клонированные из одного шаблона и использующие D-Bus, работают нестабильно. У них обоих разные имена хостов и настройки конфигурации сети. Какая команда будет использоваться, чтобы определить, имеют ли каждая из виртуальных машин разные идентификаторы D-Bus Machine ID?**  
 `dbus-uuidgen --get`
 
 
 ## Ответы на упражнения для размышления
+
+**1. Выполните следующую команду, чтобы узнать, включены ли в вашей системе расширения CPU для запуска виртуальной машины (ваши результаты могут отличаться в зависимости от вашего CPU): `grep --color -E "vmx | svm" / proc / cpuinfo`  
+В зависимости от вывода вы можете выделить `vmx` (для CPU с Intel VT-x) или `svm` (для CPU с AMD SVM). Если вы не получите результатов, обратитесь к инструкциям по прошивке BIOS или UEFI, чтобы узнать, как включить виртуализацию для вашего процессора.**  
+Результаты будут зависеть от вашего процессора. Вот пример вывода с компьютера с процессором Intel с расширениями виртуализации, включенными в прошивке UEFI:
+```console
+$ grep --color -E "vmx|svm" /proc/cpuinfo
+flags		: fpu vme de pse tsc msr pae mce cx8 apic sep mtrr pge mca cmov pat pse36 clflush dts acpi mmx fxsr sse sse2 ss ht tm pbe syscall nx pdpe1gb rdtscp lm constant_tsc art arch_perfmon pebs bts rep_good nopl xtopology nonstop_tsc cpuid aperfmperf pni pclmulqdq dtes64 monitor ds_cpl vmx smx est tm2 ssse3 sdbg fma cx16 xtpr pdcm pcid sse4_1 sse4_2 x2apic movbe popcnt tsc_deadline_timer aes xsave avx f16c rdrand lahf_lm abm 3dnowprefetch cpuid_fault epb invpcid_single pti ssbd ibrs ibpb stibp tpr_shadow vnmi flexpriority ept vpid ept_ad fsgsbase tsc_adjust bmi1 hle avx2 smep bmi2 erms invpcid rtm mpx rdseed adx smap clflushopt intel_pt xsaveopt xsavec xgetbv1 xsaves dtherm ida arat pln pts hwp hwp_notify hwp_act_window hwp_epp md_clear flush_l1d
+```
+
+**2. Если ваш процессор поддерживает виртуализацию, поищите документацию к вашему дистрибутиву для запуска гипервизора KVM.** 
+
+* Установите необходимые пакеты для запуска гипервизора KVM.  
+Это будет зависеть от вашего дистрибутива, но вот некоторые отправные точки:  
+Ubuntu - https://help.ubuntu.com/lts/serverguide/libvirt.html.  
+Fedora - https://docs.fedoraproject.org/en-US/quick-docs/getting-started-with-virtualization/  
+Arch Linux - https://wiki.archlinux.org/index.php/KVM
+
+* Если вы используете графическую среду рабочего стола, рекомендуется также установить приложение `virt-manager`, которое представляет собой графический интерфейс, который можно использовать при установке KVM. Это поможет в установке виртуальных машин и управлении ими.  
+Опять же, это будет зависеть от распределения. Пример использования Ubuntu выглядит так:
+```console
+$ sudo apt install virt-manager
+```
+
+* Загрузите ISO-образ дистрибутива Linux по вашему выбору и, следуя документации вашего дистрибутива, создайте новую виртуальную машину, используя этот ISO.  
+С этой задачей легко справляется пакет `virt-manager`. Однако виртуальную машину можно создать из командной строки с помощью команды `virt-install`. Попробуйте оба метода, чтобы понять, как развертываются виртуальные машины.
